--- a/home.html
+++ b/home.html
@@ -437,6 +437,16 @@
 
     </form>
 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- jvmconfig-ad -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-5532207804469655"
+         data-ad-slot="9311239820"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
 
     <footer class="footer">
         <p>Developed by <a href="http://sachinhandiekar.com">Sachin Handiekar</a></p>
