--- a/home.html
+++ b/home.html
@@ -437,16 +437,21 @@
 
     </form>
 
+    <br/>
+
+    <!-- Google Ads (Start)-->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- jvmconfig-ad -->
+    <!-- jvmConfig-autoSize -->
     <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
+         style="display:block"
          data-ad-client="ca-pub-5532207804469655"
-         data-ad-slot="9311239820"></ins>
+         data-ad-slot="7555305026"
+         data-ad-format="auto"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-
+    <!-- Google Ads (End)-->
+    <br/>
 
     <footer class="footer">
         <p>Developed by <a href="http://sachinhandiekar.com">Sachin Handiekar</a></p>
