--- a/home.html
+++ b/home.html
@@ -9,8 +9,7 @@
           content="JVM Options Configuration Tool - A JVM config tool which allows us to see the various flags/parameters used in changing the behaviour, debugging and many more features within the JVM.">
     <meta name="author" content="Sachin Handiekar">
 
-    <link rel="icon" href="favicon.ico">
-
+    <link rel="icon" href="favicon.png" sizes="32x32">
     <title>JVM Options Configuration Tool</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
