Added meta keywords & updated title

--- a/home.html
+++ b/home.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
           content="JVM Options Configuration Tool - A JVM config tool which allows us to see the various flags/parameters used in changing the behaviour, debugging and many more features within the JVM.">
+    <meta name="keywords" content="java, jdk, jvm, JVM, config, memory, garbage collection, GC, options, diagnostic, performance" >
+
     <meta name="author" content="Sachin Handiekar">
 
     <link rel="icon" href="favicon.png" sizes="32x32">
-    <title>JVM Options Configuration Tool</title>
+    <title>jvmConfig - JVM Options Configuration Tool (GC, Memory, Performance & many more)</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
