Updated tooltip data and text

--- a/home.html
+++ b/home.html
@@ -369,8 +369,9 @@
 
                 <!-- HeapDump on OnOutOfMemoryError   -->
                 <div class="form-group">
-                    <label class="col-sm-5" for="heapDumpOnOOMemory">Enable HeapDump on
-                        OutOfMemoryError</label>
+                    <label class="col-sm-5" for="heapDumpOnOOMemory">Enable HeapDump on OutOfMemoryError<i
+                            id="tooltip-heapDumpOnOOMemory" data-toggle="tooltip"
+                            class='glyphicon glyphicon-info-sign'></i></label>
                     <div class="col-sm-5">
                         <input id="heapDumpOnOOMemory" type="checkbox" value="">
                     </div>
@@ -378,7 +379,9 @@
 
                 <!-- ErrorFile   -->
                 <div class="form-group">
-                    <label class="col-sm-5" for="enableErrorFile">Enable ErrorData on exit</label>
+                    <label class="col-sm-5" for="enableErrorFile">Save Error data on a file<<i
+                            id="tooltip-enableErrorFile" data-toggle="tooltip"
+                            class='glyphicon glyphicon-info-sign'></i>/label>
                     <div class="col-sm-5">
                         <input id="enableErrorFile" type="checkbox" value="">
                     </div>
