--- a/home.html
+++ b/home.html
@@ -381,7 +381,7 @@
                 <div class="form-group">
                     <label class="col-sm-5" for="enableErrorFile">Save Error data on a file<<i
                             id="tooltip-enableErrorFile" data-toggle="tooltip"
-                            class='glyphicon glyphicon-info-sign'></i>/label>
+                            class='glyphicon glyphicon-info-sign'></i></label>
                     <div class="col-sm-5">
                         <input id="enableErrorFile" type="checkbox" value="">
                     </div>
