--- a/index.html
+++ b/index.html
@@ -413,6 +413,60 @@
                     </div>
                 </div>
 
+
+
+                <!-- PrintGCApplicationConcurrentTime  -->
+                <div class="form-group">
+                    <label class="col-sm-7" for="printGCApplicationConcurrentTime">Print GC Application Concurrent Time <i
+                            id="tooltip-printGCApplicationConcurrentTime" data-toggle="tooltip"
+                            class='glyphicon glyphicon-info-sign'></i></label>
+                    <div class="col-sm-5">
+                        <input id="printGCApplicationConcurrentTime" type="checkbox" value="">
+                    </div>
+                </div>
+
+
+
+                <!-- PrintGCApplicationStoppedTime   -->
+                <div class="form-group">
+                    <label class="col-sm-7" for="printGCApplicationStoppedTime">Print GC Application Stopped Time <i
+                            id="tooltip-printGCApplicationStoppedTime" data-toggle="tooltip"
+                            class='glyphicon glyphicon-info-sign'></i></label>
+                    <div class="col-sm-5">
+                        <input id="printGCApplicationStoppedTime" type="checkbox" value="">
+                    </div>
+                </div>
+
+
+                <!-- PrintAssembly   -->
+                <div class="form-group">
+                    <label class="col-sm-7" for="printAssembly">Print assembly <i
+                            id="tooltip-printAssembly" data-toggle="tooltip"
+                            class='glyphicon glyphicon-info-sign'></i></label>
+                    <div class="col-sm-5">
+                        <input id="printAssembly" type="checkbox" value="">
+                    </div>
+                </div>
+
+                <!-- PrintClassHistogram   -->
+                <div class="form-group">
+                    <label class="col-sm-7" for="printClassHistogram">Print class histogram <i
+                            id="tooltip-printClassHistogram" data-toggle="tooltip"
+                            class='glyphicon glyphicon-info-sign'></i></label>
+                    <div class="col-sm-5">
+                        <input id="printClassHistogram" type="checkbox" value="">
+                    </div>
+                </div>
+
+                <!-- PrintConcurrentLocks   -->
+                <div class="form-group">
+                    <label class="col-sm-7" for="printConcurrentLocks">Print Concurrent Locks <i
+                            id="tooltip-printConcurrentLocks" data-toggle="tooltip"
+                            class='glyphicon glyphicon-info-sign'></i></label>
+                    <div class="col-sm-5">
+                        <input id="printConcurrentLocks" type="checkbox" value="">
+                    </div>
+                </div>
             </div>
 
 
