--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link rel="icon" href="favicon.png" sizes="32x32">
     <title>JVM Options Configuration Tool (GC, Memory, Performance & more)</title>
 
-     <link rel="stylesheet" href="https://bootswatch.com/united/bootstrap.css">
+    <link rel="stylesheet" href="https://bootswatch.com/united/bootstrap.css">
 
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-     <link href="css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="css/jumbotron-narrow.css" rel="stylesheet">
     <!--
         Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]>
@@ -33,18 +33,18 @@
     <![endif]-->
 
 
-<style>
+    <style>
 
-    .container {
-        background-color: #ffffff;
-    }
+        .container {
+            background-color: #ffffff;
+        }
 
-    body {
+        body {
 
-        background: url("./imgs/background/new_year_background.png") repeat;
-    }
+            background: url("./imgs/background/new_year_background.png") repeat;
+        }
 
-</style>
+    </style>
 
 
 </head>
@@ -53,7 +53,7 @@
 
 <div class="container">
 
-     <div class="header clearfix">
+    <div class="header clearfix">
         <h1 class="text-muted">JVM Options Configuration Tool</h1>
         A JVM config tool which can be used to see various flags/parameters used in changing behaviour & debugging
         features within the JVM.
@@ -108,6 +108,7 @@
             <li><a data-toggle="tab" href="#debugging">Debugging</a></li>
             <li><a data-toggle="tab" href="#performance">Performance</a></li>
             <li><a data-toggle="tab" href="#additional">Additional</a></li>
+
         </ul>
 
         <div class="tab-content">
@@ -414,17 +415,16 @@
                 </div>
 
 
-
                 <!-- PrintGCApplicationConcurrentTime  -->
                 <div class="form-group">
-                    <label class="col-sm-7" for="printGCApplicationConcurrentTime">Print GC Application Concurrent Time <i
-                            id="tooltip-printGCApplicationConcurrentTime" data-toggle="tooltip"
-                            class='glyphicon glyphicon-info-sign'></i></label>
+                    <label class="col-sm-7" for="printGCApplicationConcurrentTime">Print GC Application Concurrent Time
+                        <i
+                                id="tooltip-printGCApplicationConcurrentTime" data-toggle="tooltip"
+                                class='glyphicon glyphicon-info-sign'></i></label>
                     <div class="col-sm-5">
                         <input id="printGCApplicationConcurrentTime" type="checkbox" value="">
                     </div>
                 </div>
-
 
 
                 <!-- PrintGCApplicationStoppedTime   -->
@@ -497,7 +497,32 @@
             <div id="additional" class="tab-pane fade">
                 <br/>
 
+
+                <!-- -XX   -->
+                <div class="form-group">
+                    <label class="col-sm-5" for="hashcodeSelect">Hashcode algorithm</label>
+                    <div class="col-sm-5">
+                        <select class="form-control" id="hashcodeSelect">
+                            <option value="">default</option>
+                            <option value="0">Park-Miller RNG (default until Java 7)</option>
+                            <option value="1">f (address, global state)</option>
+                            <option value="2">Const 1</option>
+                            <option value="3">Sequence Counter</option>
+                            <option value="4">Object address</option>
+                            <option value="5">Thread-local Xorshift</option>
+                        </select>
+
+                    </div>
+
+
+                </div>
+
+
             </div>
+
+ 
+
+
         </div>
 
         <!-- JVM Reference Options -->
@@ -535,7 +560,6 @@
              src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67"
              alt="Fork me on GitHub"
              data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
-
 
 
 </div> <!-- /container -->
