--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
     <link rel="stylesheet" href="https://bootswatch.com/united/bootstrap.css">
 
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <link href="css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="http://sachin-handiekar.github.io/jvmconfig/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="http://sachin-handiekar.github.io/jvmconfig/css/jumbotron-narrow.css" rel="stylesheet">
     <!--
         Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]>
     <script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/ie-emulation-modes-warning.js"></script>
+    <script src="http://sachin-handiekar.github.io/jvmconfig/js/ie-emulation-modes-warning.js"></script>
     <style type="text/css"></style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -41,7 +41,7 @@
 
         body {
 
-            background: url("./imgs/background/new_year_background.png") repeat;
+            background: url("http://sachin-handiekar.github.io/jvmconfig/imgs/background/new_year_background.png") repeat;
         }
 
     </style>
@@ -585,7 +585,7 @@
 </script>
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="js/ie10-viewport-bug-workaround.js"></script>
+<script src="http://sachin-handiekar.github.io/jvmconfig/js/ie10-viewport-bug-workaround.js"></script>
 
 <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
@@ -593,7 +593,7 @@
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
 
-<script type='text/javascript' src="js/app.js"></script>
+<script type='text/javascript' src="http://sachin-handiekar.github.io/jvmconfig/js/app.js"></script>
 
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4e3c6a1d62498f68"></script>
