--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
     <br/>
 
     <footer class="footer">
-        <p>Developed by <a href="http://sachinhandiekar.com">Sachin Handiekar</a></p>
+        <p class="text-center">Developed by <a href="http://sachinhandiekar.com">Sachin Handiekar</a></p>
     </footer>
 
     <!-- github banner    -->
