Added readonly tag for jvmSummary textarea

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         <br/>
 
         <textarea id="jvmFlagResult" class="form-control" style="height: 180px"
-                  placeholder="JVM Options Summary"></textarea>
+                  placeholder="JVM Options Summary" readonly></textarea>
 
     </form>
 
