--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <meta name="author" content="Sachin Handiekar">
 
 
-    <!-- No cache header -->
+    <!-- No cache header 
     <meta http-equiv="cache-control" content="max-age=0" />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
-
+    -->
+    
     <link rel="icon" href="favicon.png" sizes="32x32">
     <title>JVM Options Configuration Tool (GC, Memory, Performance & more)</title>
 
