--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         body {
 
-            background: url("imgs/background/new_year_background.png") repeat;
+            background: url("http://sachin-handiekar.github.io/jvmconfig/imgs/background/new_year_background.png") repeat;
         }
 
     </style>
