Changed the JS url to rawgit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]>
     <script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="http://sachin-handiekar.github.io/jvmconfig/js/ie-emulation-modes-warning.js"></script>
+    <script src="https://rawgit.com/sachin-handiekar/jvmconfig/gh-pages/js/ie-emulation-modes-warning.js"></script>
     <style type="text/css"></style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -343,7 +343,7 @@
 </script>
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="http://sachin-handiekar.github.io/jvmconfig/js/ie10-viewport-bug-workaround.js"></script>
+<script src="https://rawgit.com/sachin-handiekar/jvmconfig/gh-pages/js/ie10-viewport-bug-workaround.js"></script>
 
 <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
@@ -351,7 +351,7 @@
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
 
-<script type='text/javascript' src="http://sachin-handiekar.github.io/jvmconfig/js/app.js"></script>
+<script type='text/javascript' src="https://rawgit.com/sachin-handiekar/jvmconfig/gh-pages/js/app.js"></script>
 
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4e3c6a1d62498f68"></script>
