--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <link rel="stylesheet" href="https://bootswatch.com/united/bootstrap.css">
 
-    <link href="http://sachin-handiekar.github.io/jvmconfig/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <link href="http://sachin-handiekar.github.io/jvmconfig/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="https://rawgit.com/sachin-handiekar/jvmconfig/gh-pages/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="https://rawgit.com/sachin-handiekar/jvmconfig/gh-pages/css/jumbotron-narrow.css" rel="stylesheet">
     <!--
         Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]>
@@ -51,7 +51,7 @@
 
         body {
 
-            background: url("http://sachin-handiekar.github.io/jvmconfig/imgs/background/new_year_background.png") repeat;
+            background: url("https://rawgit.com/sachin-handiekar/jvmconfig/gh-pages/imgs/background/new_year_background.png") repeat;
         }
 
     </style>
