Updated bootswatch link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" href="favicon.png" sizes="32x32">
     <title>JVM Options Configuration Tool (GC, Memory, Performance & more)</title>
 
-    <link rel="stylesheet" href="https://bootswatch.com/united/bootstrap.css">
+    <link rel="stylesheet" href="https://bootswatch.com/3/united/bootstrap.css">
 
     <link href="https://rawgit.com/sachin-handiekar/jvmconfig/gh-pages/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <link href="https://rawgit.com/sachin-handiekar/jvmconfig/gh-pages/css/jumbotron-narrow.css" rel="stylesheet">
